--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </div>
     </section>
-    <section style="flex-direction: row;">
+    <section>
       <div class="card" style="width: 18rem;">
         <img src="https://www.amazingclubs.com/img/flowerofthemonthclub.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -68,7 +68,8 @@
       </div>
     </section>
     <section>
-      <form>
+      <div class="container">
+      <form class="col-md-12">
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputEmail4">Email</label>
@@ -114,6 +115,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Sign in</button>
       </form>
+      </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
