--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="card-group">
       <div class="card" style="width: 18rem;">
         <img src="https://www.amazingclubs.com/img/flowerofthemonthclub.jpg" class="card-img-top" alt="...">
         <div class="card-body">
